--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -699,6 +699,12 @@ input, select, textarea {
 				width: 100%;
 			}
 
+		.image.me img{
+			display: block;
+			margin: 2.5rem 0;
+			width: 60%;
+		}
+
 		.image.main {
 			display: block;
 			margin: 2.5rem 0;
@@ -706,7 +712,7 @@ input, select, textarea {
 		}
 
 			.image.main img {
-				width: 50%;
+				width: 100%;
 			}
 
 		@media screen and (max-width: 736px) {
